# x86d

./: .gitignore  CMakeLists.txt  README.md
include/: libx86d.h
src/cli/: main.c
src/core/: core.c  core.h  decode.c  decode.h  opcodes.c  opcodes.h
tests/: base.asm  fpu.asm
